--- a/order.html
+++ b/order.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Order Admin Dashboard</title>
+        <title>Order Admin</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
@@ -12,6 +12,7 @@
         <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/icons.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/custom.css" rel="stylesheet" type="text/css" />
         <script src="assets/js/modernizr.min.js"></script>
 
     </head>
@@ -65,7 +66,7 @@
                         <!-- Navigation Menu-->
                         <ul class="navigation-menu">
                             <li class="has-submenu">
-                                <a href="order.html"><i class="mdi mdi-view-dashboard"></i> <span> Dashboard </span> </a>
+                                <a href="order.html"><i class="mdi mdi-view-dashboard"></i> <span> All Orders </span> </a>
                             </li>                                
                         </ul>
                         <!-- End navigation menu -->
@@ -86,30 +87,41 @@
                                     <th class="table-title h3">LIST OF ORDERS</th>
                                 </tr>
                                 </thead>
-                                <tbody class="h5">
+                                <tbody class="h4">
                                 <tr>
-                                    <td><a href="order01.html" class="text-dark">Order <span class="badge badge-success">#01</span></td>
+                                    <div class="d-flex justify-content-between">
+                                        <td class=""><a href="order01.html" class="text-dark order-text">Order <span class="badge badge-secondary">#01</span></td>
+                                    </div>
                                 </tr>
                                 <tr>
-                                    <td><a href="order02.html" class="text-dark">Order <span class="badge badge-success">#02</span></td>
+                                    <div class="d-flex justify-content-between">
+                                        <td class=""><a href="order02.html" class="text-dark order-text">Order <span class="badge badge-secondary">#02</span></td>
+                                    </div>
                                 </tr>
                                 <tr>
-                                    <td><a href="order03.html" class="text-dark">Order <span class="badge badge-success">#03</span></td>
+                                    <div class="d-flex justify-content-between">
+                                        <td class=""><a href="order03.html" class="text-dark order-text">Order <span class="badge badge-secondary">#03</span></td>
+                                    </div>
                                 </tr>
                                 <tr>
-                                    <td><a href="order04.html" class="text-dark">Order <span class="badge badge-success">#04</span></td>
+                                    <div class="d-flex justify-content-between">
+                                        <td class=""><a href="order04.html" class="text-dark order-text">Order <span class="badge badge-secondary">#04</span></td>
+                                    </div>
                                 </tr>
                                 <tr>
-                                    <td><a href="order05.html" class="text-dark">Order <span class="badge badge-success">#05</span></td>
+                                    <div class="d-flex justify-content-between">
+                                        <td class=""><a href="order05.html" class="text-dark order-text">Order <span class="badge badge-secondary">#05</span></td>
+                                    </div>
                                 </tr>
                                 <tr>
-                                    <td><a href="order06.html" class="text-dark">Order <span class="badge badge-success">#06</span></td>
+                                    <div class="d-flex justify-content-between">
+                                        <td class=""><a href="order06.html" class="text-dark order-text">Order <span class="badge badge-secondary">#06</span></td>
+                                    </div>
                                 </tr>
                                 <tr>
-                                    <td><a href="order07.html" class="text-dark">Order <span class="badge badge-success">#07</span></td>
-                                </tr>
-                                <tr>
-                                    <td><a href="order08.html" class="text-dark">Order <span class="badge badge-success">#08</span></td>
+                                    <div class="d-flex justify-content-between">
+                                        <td class=""><a href="order07.html" class="text-dark order-text">Order <span class="badge badge-secondary">#07</span></td>
+                                    </div>
                                 </tr>
                                 </tbody>
                             </table>
