--- a/order05.html
+++ b/order05.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Order Admin Dashboard</title>
+    <title>Order Admin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
@@ -65,7 +65,7 @@
                     <!-- Navigation Menu-->
                     <ul class="navigation-menu">
                         <li class="has-submenu">
-                            <a href="order.html"><i class="mdi mdi-view-dashboard"></i> <span> Dashboard </span> </a>
+                            <a href="order.html"><i class="mdi mdi-view-Dashboard"></i> <span> All Orders </span> </a>
                         </li>
                     </ul>
                     <!-- End navigation menu -->
@@ -77,150 +77,68 @@
 
     <div class="wrapper">
         <div class="container">
+            <div class="col-sm-12 m-l-5">
+                <h4 class="page-title"><a href="order.html"><i class="fa fa-1x fa-arrow-left text-dark"></i></a> Order
+                    <span class="badge badge-success">#05</span></h4>
+            </div>
             <div class="row">
-                    <div class="col-sm-12">
-                        <h4 class="page-title">Order <span class="badge badge-success">#05</span></h4>
-                    </div>
-                </div>
-            <div class="row">
-                <div class=" col-sm-12 col-md-8 col-lg-6 mx-auto">
+                <div class=" col-sm-12 col-md-8 col-lg-5 mx-auto">
                     <div class="card-box">
-                        <table class="table text-center mx-auto">
+                        <table class="table table-striped text-center mx-auto">
                             <thead>
-                                <tr>
-                                    <th class="table-title">Order Items</th>
-                                    <th class="table-title">Available</th>
-                                    <th class="table-title">Not available</th>
-                                </tr>
+                                <th class="table-title">Items</th>
+                                <th class="table-title">Collected</th>
+                                <th class="table-title">Issues</th>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>CoCa-Cola</td>
                                     <td>
-                                        <div class="checkbox checkbox-custom checkbox-success">
-                                            <input id="1-1" type="checkbox">
-                                            <label for="1-1"></label>
+                                        <div class="custom-control custom-radio custom-control-inline ">
+                                            <input type="radio" id="customRadioInline0" name="customRadio" class="custom-control-input">
+                                            <label class="custom-control-label" for="customRadioInline0"></label>
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="checkbox checkbox-custom checkbox-danger">
-                                            <input id="1-2" type="checkbox">
-                                            <label for="1-2"></label>
+                                        <div class="custom-control custom-radio custom-control-inline custom-radio-danger">
+                                            <input type="radio" id="customRadioInline0-1" name="customRadio" class="custom-control-input">
+                                            <label class="custom-control-label" for="customRadioInline0-1"></label>
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>CoCa-Cola</td>
                                     <td>
-                                        <div class="checkbox checkbox-custom checkbox-success">
-                                            <input id="2-1" type="checkbox">
-                                            <label for="2-1"></label>
+                                        <div class="custom-control custom-radio custom-control-inline">
+                                            <input type="radio" id="customRadioInline1-0" name="customRadio" class="custom-control-input">
+                                            <label class="custom-control-label" for="customRadioInline1-0"></label>
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="checkbox checkbox-custom checkbox-danger">
-                                            <input id="2-2" type="checkbox">
-                                            <label for="2-2"></label>
+                                        <div class="custom-control custom-radio custom-control-inline">
+                                            <input type="radio" id="customRadioInline1-1" name="customRadio" class="custom-control-input">
+                                            <label class="custom-control-label" for="customRadioInline1-1"></label>
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>CoCa-Cola</td>
                                     <td>
-                                        <div class="checkbox checkbox-custom checkbox-success">
-                                            <input id="3-1" type="checkbox">
-                                            <label for="3-1"></label>
+                                        <div class="custom-control custom-radio custom-control-inline">
+                                            <input type="radio" id="customRadioInline2-0" name="customRadio" class="custom-control-input">
+                                            <label class="custom-control-label" for="customRadioInline2-0"></label>
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="checkbox checkbox-custom checkbox-danger">
-                                            <input id="3-2" type="checkbox">
-                                            <label for="3-2"></label>
+                                        <div class="custom-control custom-radio custom-control-inline">
+                                            <input type="radio" id="customRadioInline2-1" name="customRadio" class="custom-control-input">
+                                            <label class="custom-control-label" for="customRadioInline2-1"></label>
                                         </div>
                                     </td>
-                                </tr>
-                                <tr>
-                                    <td>CoCa-Cola</td>
-                                    <td>
-                                        <div class="checkbox checkbox-custom checkbox-success">
-                                            <input id="4-1" type="checkbox">
-                                            <label for="4-1"></label>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="checkbox checkbox-custom checkbox-danger">
-                                            <input id="4-2" type="checkbox">
-                                            <label for="4-2"></label>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>CoCa-Cola</td>
-                                    <td>
-                                        <div class="checkbox checkbox-custom checkbox-success">
-                                            <input id="5-1" type="checkbox">
-                                            <label for="5-1"></label>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="checkbox checkbox-custom checkbox-danger">
-                                            <input id="5-2" type="checkbox">
-                                            <label for="5-2"></label>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>CoCa-Cola</td>
-                                    <td>
-                                        <div class="checkbox checkbox-custom checkbox-success">
-                                            <input id="6-1" type="checkbox">
-                                            <label for="6-1"></label>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="checkbox checkbox-custom checkbox-danger">
-                                            <input id="6-2" type="checkbox">
-                                            <label for="6-2"></label>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>CoCa-Cola</td>
-                                    <td>
-                                        <div class="checkbox checkbox-custom checkbox-success">
-                                            <input id="7-1" type="checkbox">
-                                            <label for="7-1"></label>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="checkbox checkbox-custom checkbox-danger">
-                                            <input id="7-2" type="checkbox">
-                                            <label for="7-2"></label>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>CoCa-Cola</td>
-                                    <td>
-                                        <div class="checkbox checkbox-custom checkbox-success">
-                                            <input id="8-1" type="checkbox">
-                                            <label for="8-1"></label>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="checkbox checkbox-custom checkbox-danger">
-                                            <input id="8-2" type="checkbox">
-                                            <label for="8-2"></label>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><button class="btn btn-primary waves-effect waves-light" type="submit">Submit</button></td>
-                                    <td></td>
-                                    <td><button class="btn btn-danger waves-effect waves-light m-l-5" type="submit">Submit</button></td>
                                 </tr>
                             </tbody>
                         </table>
+                        <div class="text-center"><button class="btn btn-primary" type="submit">Done</button></div>
                     </div>
                 </div>
             </div>
