--- a/order.html
+++ b/order.html
@@ -202,8 +202,7 @@
                 <table class="table table-striped text-center mx-auto">
                   <thead>
                     <th class="table-title">Items</th>
-                    <th class="table-title">Availaible</th>
-                    <th class="table-title">UnAvailaible</th>
+                    <th class="table-title">Quantity</th>
                   </thead>
                   <tbody id="orderDetailTable"></tbody>
                 </table>
@@ -213,7 +212,7 @@
                     class="btn btn-primary"
                     type="submit"
                   >
-                    Done
+                    Update Order Status
                   </button>
                 </div>
               </div>
